--- a/index.html
+++ b/index.html
@@ -503,6 +503,7 @@
       </form>
     </div>
 
+    <script src="./js/menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
