menu-icon для мобильного

--- a/index.html
+++ b/index.html
@@ -15,36 +15,45 @@
   <body>
     <header class="header">
       <div class="header-container">
-        <a href="#"><img src="./images/WebStudio.jpg" class="logo-link" alt="Web Studio" /></a>
-
         <nav class="site-nav-container">
-          <ul class="site-nav">
-            <li class="site-nav-item"><a href="./index.html" class="site-nav-link-current">Студия</a></li>
-            <li class="site-nav-item"><a href="./portfolio.html" class="site-nav-link">Портфолио</a></li>
-            <li class="site-nav-item"><a href="#" class="site-nav-link">Контакты</a></li>
-          </ul>
-        </nav>
+          <a href="#"><img src="./images/WebStudio.jpg" class="logo-link" alt="Web Studio" /></a>
 
-        <address class="header-address-container">
-          <ul class="header-address-list">
-            <li class="header-address-item">
-              <a class="header-address-link" href="#mailto:info@devstudio.com">
-                <svg class="header-address-icon envelope" width="16px" height="12px">
-                  <use href="./images/sprite.svg#icon-envelope"></use>
-                </svg>
-                info@devstudio.com
-              </a>
-            </li>
-            <li class="header-address-item">
-              <a class="header-address-link" href="#tel:+380961111111">
-                <svg class="header-address-icon phone" width="10px" height="15px">
-                  <use href="./images/sprite.svg#icon-phone"></use>
-                </svg>
-                +38-096-111-11-11
-              </a>
-            </li>
-          </ul>
-        </address>
+          <button type="button" class="mobile-menu-button is-open" aria-expanded="false" data-menu-button>
+            <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+              <use class="icon-cross" href="./images/sprite.svg#icon-cross"></use>
+              <use class="icon-menu" href="./images/sprite.svg#icon-menu"></use>
+            </svg>
+          </button>
+
+          <div class="nav-address-container">
+            <ul class="site-nav">
+              <li class="site-nav-item"><a href="./index.html" class="site-nav-link-current">Студия</a></li>
+              <li class="site-nav-item"><a href="./portfolio.html" class="site-nav-link">Портфолио</a></li>
+              <li class="site-nav-item"><a href="#" class="site-nav-link">Контакты</a></li>
+            </ul>
+
+            <address class="header-address-container">
+              <ul class="header-address-list">
+                <li class="header-address-item">
+                  <a class="header-address-link" href="#mailto:info@devstudio.com">
+                    <svg class="header-address-icon envelope" width="16px" height="12px">
+                      <use href="./images/sprite.svg#icon-envelope"></use>
+                    </svg>
+                    info@devstudio.com
+                  </a>
+                </li>
+                <li class="header-address-item">
+                  <a class="header-address-link" href="#tel:+380961111111">
+                    <svg class="header-address-icon phone" width="10px" height="15px">
+                      <use href="./images/sprite.svg#icon-phone"></use>
+                    </svg>
+                    +38-096-111-11-11
+                  </a>
+                </li>
+              </ul>
+            </address>
+          </div>
+        </nav>
       </div>
     </header>
 
@@ -503,7 +512,7 @@
       </form>
     </div>
 
-    <script src="./js/menu.js"></script>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
