--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="nav-address-container" id="nav-address-container" data-menu>
           <nav class="site-nav-container">
-            <ul class="site-nav">
+            <ul class="site-nav-list">
               <li class="site-nav-item"><a href="./index.html" class="site-nav-link">Студия</a></li>
               <li class="site-nav-item"><a href="./portfolio.html" class="site-nav-link">Портфолио</a></li>
               <li class="site-nav-item"><a href="#" class="site-nav-link">Контакты</a></li>
