ьодальное окно для мобильной версии

--- a/index.html
+++ b/index.html
@@ -523,8 +523,9 @@
         <div class="accept-conditions">
           <label class="accept-conditions-checkbox">
             <input class="accept-conditions-box visually-hidden" type="checkbox" name="accept-mailing" />
-            <span class="accept-conditions-text">Соглашаюсь с рассылкой и принимаю</span>
-            <a class="conditions-text" href="#">Условия договора</a>
+            <span class="accept-conditions-text">Соглашаюсь с рассылкой и принимаю
+              <a class="conditions-text" href="#">Условия договора</a>
+            </span>
           </label>
         </div>
 
