header для таблетки и десктопа

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="header">
       <div class="header-container">
-        <a href="#"><img src="./images/WebStudio.jpg" class="logo-link" alt="Web Studio" /></a>
+        <a class="logo-link" href="#"><img src="./images/WebStudio.jpg" alt="Web Studio" /></a>
 
         <button type="button" class="mobile-menu-button" aria-expanded="false" aria-controls="nav-address-container" data-menu-button>
           <svg width="40" height="40" aria-label="Переключатель мобильного меню">
@@ -156,8 +156,13 @@
             <li class="emploee-card">
               <img
                 class="emploee-image"
-                srcset="./images/John-mobile1x.jpg 1x, ./images/John-mobile2x.jpg 2x"
-                src="./images/John-mobile1x.jpg"
+                srcset="./images/John-mobile1x.jpg 1x, 
+                ./images/John-mobile2x.jpg 2x, 
+                ./images/John-tablet1x.jpg 1x, 
+                ./images/John-tablet2x.jpg 2x, 
+                ./images/John-desktop1x.jpg 1x, 
+                ./images/John-desktop2x.jpg 2x"
+                src="./images/John-mobile1x.jpg,"
                 alt="John_Smith"
               />
               <h4 class="emploee-name">Николай Кучеренко</h4>
