--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
           <nav class="site-nav-container">
             <ul class="site-nav-list">
               <li class="site-nav-item"><a href="./index.html" class="site-nav-link">Студия</a></li>
-              <li class="site-nav-item"><a href="./portfolio.html" class="site-nav-link">Портфолио</a></li>
+              <li class="site-nav-item"><a href="./portfolio.html" class="site-nav-link active">Портфолио</a></li>
               <li class="site-nav-item"><a href="#" class="site-nav-link">Контакты</a></li>
             </ul>
           </nav>
